# multitenant

./: Dockerfile  README.md  docker-compose.yml
src/: pyproject.toml
src/api/: urls.py
src/api/customers/: serializers.py  urls.py  views.py
src/api/departments/: serializers.py  urls.py  views.py
src/api/organizations/: serializers.py  urls.py  views.py
src/api/tenants/: serializers.py  urls.py  views.py
src/api/users/: middleware.py  serializers.py  urls.py  views.py
src/conf/: asgi.py  settings.py  wsgi.py
src/database/: apps.py
src/database/customers/: apps.py  models.py
src/database/customers/migrations/: 0001_initial.py  0002_initial.py
src/database/departments/: apps.py  models.py
src/database/departments/migrations/: 0001_initial.py  0002_initial.py
src/database/organizations/: apps.py  models.py
src/database/organizations/migrations/: 0001_initial.py  0002_initial.py
src/database/tenants/: apps.py  models.py
src/database/tenants/migrations/: 0001_initial.py  0002_initial.py
src/database/users/: apps.py  models.py
src/database/users/migrations/: 0001_initial.py
src/tests/: utils.py
src/tests/api/: conftest.py
src/tests/api/customers/: test_customers_views.py
src/tests/api/departments/: test_departments_views.py
src/tests/api/organizations/: test_organizations_views.py
src/tests/api/tenants/: test_tenants_views.py
src/tests/database/departments/: factories.py
src/tests/database/organizations/: factories.py
src/tests/database/tenants/: factories.py
src/tests/database/users/: factories.py
